[package]
name = "chat-app"
path = "ruta/a/tu/archivo_principal.rs"
version = "0.1.0"               # Versión actual del proyecto (SemVer)
edition = "2021"                # Edición de Rust utilizada (ej. 2015, 2018, 2021)
authors = ["Tu Nombre <tu@email.com>"] # Lista de autores del proyecto
description = "Una aplicación de ejemplo para demostrar Cargo.toml"

# Dependencias normales necesarias para compilar el proyecto
[dependencies]
serde = { version = "1.0", features = ["derive"] } # Librería para serialización
tokio = { version = "1.0", features = ["full"] }   # Framework asíncrono
rand = "0.8.5"                                      # Generador de números aleatorios

# Dependencias que solo se usan durante el desarrollo o pruebas (tests)
[dev-dependencies]
rstest = "0.18.0"               # Librería para facilitar pruebas unitarias

# Configuración para optimizar el código en el modo de producción (release)
[profile.release]
opt-level = 3                   # Máxima optimización de velocidad
lto = true                      # Habilita Link-Time Optimization para reducir el tamaño del binario
